Changelog
=========

1.2.2 (unreleased)
------------------

- Nothing changed yet.


1.2.1 (2011-06-27)
------------------

    * Adding buildout configs to test sc.social.bookmarks
      [erico_andrei]

    * Fixing Zope API change: IVocabularyFactory now in zope.schema.interfaces.
      [erico_andrei]


1.2 (2011-06-13)
----------------

    * Base bookmarks rendering with content provider instead of macro.
      [rnix]

    * Cleanup JS
      [rnix]

    * Add "Show Icons Only" Property to control panel and integrate into views
      [rnix]

    * German Translation
      [rnix]

    * Plone 4.1 compatibility.
      [thet]

    * Add all dependencies to setup.py.
      [thet]

    * Zope API change: IVocabularyFactory now in zope.schema.interfaces.
      [thet]

    * Add migration step.
      [thet]

    * More cleanup.
      [thet]


1.1 (2011-01-21)
----------------

    * Add portlet for social bookmarks. [thet]
    * Removed KSS dependency and replace functionality with jQuery. [thet]
    * Created a bookmarks view and assigned it as href for the bookmarks-action.
      This makes it more accessible. [thet]
    * Code cleanup & refactoring. [thet]
    * change on version number [hvelarde]
    * entry_points to z3c.autoinclude.plugin; there's no need for a ZCML slug now [hvelarde]
    * fixing MessageFactory [hvelarde]
    * adding icon_expr to controlpanel.xml as required in Plone 4 [hvelarde]
    * adding some basic tests [hvelarde]
    * aesthetic changes on xml files [hvelarde]


1.0 (2009-12-04)
-----------------

    * Fix order of providers [lucmult]
    * Improve styles [tamosauskas]


0.9 (2009-08-15)
-----------------

    * Moves code to svn.plone.org/svn/collective/sc.social.bookmarks/
      [erico_andrei]


0.8 (2009-05-18)
----------------

    * Fixes an annoying issue with dancing divs
      [tamosauskas]


0.7 (2009-04-15)
----------------
    
    * Fixes string formatting error in providers without all parameters mapped