@@ -1,0 +1,5 @@
+from sc.social.bookmarks.browser.portlet import (
+    ISocialBookmarksPortlet,
+    Assignment,
+    AddForm,
+    Renderer)
