@@ -4,7 +4,8 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+    * Add sb_portlet module for 1.1 backwards compatibility.
+      [thet]
 
 
 1.2.1 (2011-06-27)
